[package]
name = "ruby-marshal-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0" }
ruby-marshal = { version = "0.0.0", path = "../ruby-marshal" }
serde_json = "1.0.107"
