[package]
name = "ruby-marshal-cli"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.92"
argh = "0.1.12"
base64 = "0.22.1"
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0" }
ruby-marshal = { version = "0.0.0", path = "../ruby-marshal" }
serde_json = "1.0.132"
