[package]
name = "ruby-marshal-derive"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = [ "extra-traits" ] }

[dev-dependencies]
trybuild = { version = "1.0.96", features = ["diff"] }
ruby-marshal = { path = "../ruby-marshal" }